# OTMB

doc/adr/: 0001-record-architecture-decisions.md  0002-project-vision.md
firmware/: Cargo.toml  README.md  rust-toolchain.toml
firmware/src/: main.rs
schematics/otmb_board/: otmb_board.kicad_pro  otmb_board.kicad_sch  otmb_library.kicad_sym  sym-lib-table
