[package]
edition = "2021"
name = "embassy-stm32f4-examples"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
# Change stm32f429zi to your chip name, if necessary.
embassy-stm32 = { version = "0.1.0", features = ["defmt", "stm32f429zi", "unstable-pac", "memory-x", "time-driver-any", "exti", "chrono"] }
embassy-executor = { version = "0.6.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }

defmt = "0.3.5"
defmt-rtt = "0.4.0"
cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"
panic-probe = "0.3.1"
rand_core = "0.6.4"


[patch.crates-io]
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "545eb39819d792829dfbae37b44208d09a530547" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "545eb39819d792829dfbae37b44208d09a530547" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "545eb39819d792829dfbae37b44208d09a530547" }

[profile.release]
debug = 2
